[package]
categories = [ "command-line-utilities" ]
description = "Rename screen shots & images using OpenAI Vision"
edition = "2021"
license = "MIT"
name = "image-renamer"
repository = "https://github.com/dsully/image-renamer"
version = "0.1.0"

[[bin]]
name = "image-renamer"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
anyhow = "1.0.80"
async-openai = "0.18.3"
base64 = "0.21.7"
chrono = "0.4.34"
clap = { version = "4.5.1", features = [ "derive" ] }
ctrlc = { version = "3.4.2", features = [ "termination" ] }
dialoguer = "0.11.0"
figment = { version = "0.10.14", features = [ "json" ] }
fs-err = "2.11.0"
indicatif = "0.17.8"
infer = "0.15.0"
kamadak-exif = "0.5.5"
serde = { version = "1.0.197", features = [ "derive" ] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = [ "full" ] }
walkdir = "2.4.0"
xdg = "2.5.2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "dsully/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
