[package]
categories = [ "command-line-utilities" ]
description = "Rename screen shots & images using OpenAI Vision"
edition = "2024"
license = "MIT"
name = "image-renamer"
repository = "https://github.com/dsully/image-renamer"
version = "0.1.0"

[[bin]]
name = "image-renamer"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
anyhow = "1.0.100"
async-openai = "0.27.2"
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.48", features = [ "derive" ] }
ctrlc = { version = "3.5.0", features = [ "termination" ] }
dialoguer = "0.11.0"
figment = { version = "0.10.19", features = [ "json" ] }
fs-err = "3.1.2"
indicatif = "0.17.11"
infer = "0.19.0"
kamadak-exif = "0.6.1"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = [ "full" ] }
walkdir = "2.5.0"
xdg = "2.5.2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = [ "homebrew" ]
# A GitHub repo to push Homebrew formulas to
tap = "dsully/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [ "aarch64-apple-darwin", "x86_64-unknown-linux-gnu" ]
# Publish jobs to run in CI
publish-jobs = [ "homebrew" ]
# Which actions to run on pull requests
pr-run-mode = "plan"
